objects/JunoDoc__Email_Template_Child__c/JunoDoc__Email_Template_Child__c.object-meta.xml
<CustomObject>
    <label>Email Template Related Object</label>
    <nameField>
        <displayFormat>ETC-{0000}</displayFormat>
        <label>Email Templ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Template Related Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>