objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Child_object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Child_object__c</fullName>
    <label>Related object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>