objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Child_Query__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Child_Query__c</fullName>
    <label>Related Object Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>