objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>JunoDoc__Email_Template__c</referenceTo>
    <relationshipName>Email_Template_Childs</relationshipName>
    <type>Lookup</type>
</CustomField>