objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Height__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Height__c</fullName>
    <label>Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>