objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Order_By__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Order_By__c</fullName>
    <label>Order By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>