objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Parent_Reference__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Parent_Reference__c</fullName>
    <label>Parent Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>