objects/JunoDoc__Email_Template_Child__c/fields/JunoDoc__Related_Object_Labels__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Related_Object_Labels__c</fullName>
    <label>Related Object Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>